--- a/style4.css
+++ b/style4.css
@@ -17,7 +17,7 @@ body {
     background: white;
     padding: 30px;
     border-radius: 10px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 8px 24px 6px rgba(22, 248, 6, 0.903);
     width: 90%;
     max-width: 500px;
     text-align: center;
