--- a/style7.css
+++ b/style7.css
@@ -13,7 +13,7 @@ body {
     background: #fff;
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 8px 24px 6px rgba(222, 6, 251, 0.9);
     max-width: 1200px;
     width: 100%;
 }
